# genomebase

./: .gitignore  Makefile.toml  README.md  dprint.json
.githooks/: pre-push
co-expression/co-expression-domain/src/: lib.rs  value.rs
common/: Cargo.toml
examples/plain/: package.json  pnpm-lock.yaml
examples/plain/pages/: index.tsx
genome/: Cargo.toml
genome/genome-domain/src/: lib.rs
genomebase/: Cargo.toml
genomebase-clients/: package.json  pnpm-lock.yaml
genomebase-servers/: Cargo.toml
genomebase-servers/co-expression/co-expression-domain/: Cargo.toml
genomebase-servers/co-expression/src/: main.rs
genomebase-servers/common/: Cargo.toml
genomebase-servers/common/src/: lib.rs
genomebase-servers/genome/: Cargo.toml
genomebase-servers/genome/genome-domain/: Cargo.toml
genomebase-servers/genome/genome-domain/src/: go_term.rs  kegg.rs  kog.rs  lib.rs  multistats_correction.rs
genomebase-servers/genome/genome-domain/src/gene/: mod.rs
genomebase-servers/genome/genome-domain/src/gene/transcript/: mod.rs
genomebase-servers/genome/genome-domain/src/gene/transcript/annotation/: go_term.rs  kegg.rs  kog.rs  mod.rs
genomebase-servers/genome/mysql/: .env  Cargo.toml  docker-compose.test.yml  docker-compose.yml
genomebase-servers/genome/mysql/docs/: README.md  _sqlx_migrations.md  annotation_models.md  annotation_versions.md  domain_annotations.md  domains.md  gene_cross_references.md  gene_models.md  genes.md  genome_versions.md  genomes.md  gff_records.md  go_terms.md  go_terms_annotation.md  kegg_orthologies.md  kegg_orthologies_annotation.md  kegg_orthology_pathway.md  kegg_pathway_relations.md  kegg_pathways.md  kegg_pathways_annotation.md  kegg_reaction.md  kegg_reaction_annotation.md  kegg_reaction_orthology.md  kegg_reaction_pathway.md  kog_annotations.md  kogs.md  nomenclatures.md  organisms.md  schema.json  transcript_structure.md  transcripts.md  users.md
genomebase-servers/genome/mysql/migration/src/: m20220101_000001_create_table.rs
genomebase-servers/genome/mysql/migrations/: 20230324101645_init.down.sql  20230324101645_init.up.sql
genomebase-servers/genome/mysql/src/: lib.rs
genomebase-servers/genome/mysql/src/entity/: annotation_model_version.rs  annotation_models.rs  domain_annotations.rs  domains.rs  gene_models.rs  genes.rs  genome_sequence.rs  genome_version.rs  genomes.rs  gff_records.rs  go_terms.rs  go_terms_annotation.rs  kegg_orthologies.rs  kegg_orthologies_annotation.rs  kegg_pathways.rs  kegg_pathways_annotation.rs  kegg_reaction.rs  kegg_reaction_annotation.rs  kog_annotations.rs  kogs.rs  mod.rs  organism.rs  organisms.rs  prelude.rs  sea_orm_active_enums.rs  transcript_structure.rs  transcripts.rs  users.rs
genomebase-servers/genome/mysql/src/import/: gff.rs  mod.rs
genomebase-servers/genome/mysql/src/repositories/: gene.rs  mod.rs  organism.rs
genomebase-servers/genome/src/: lib.rs
genomebase/common/src/: lib.rs
genomebase/genome/: Cargo.toml
genomebase/genome/src/: lib.rs  transcripts.rs
genomebase/genome/src/functional_annotations/: go_term.rs  mod.rs
genomebase/gff/: Cargo.toml  README.md
genomebase/gff/src/: attributes.rs  lib.rs  record.rs
genomebase/gff/src/attributes/: mod.rs
genomebase/gff/src/directive/: mod.rs  standard_directives.rs  standards.rs
genomebase/gff/src/reader/: line.rs  mod.rs
proto-def/: buf.gen.yaml  buf.work.yaml
proto-def/coexpression/: buf.yaml
proto-def/coexpression/genomebase_coexpression/v1/: coexpression.proto
proto-def/coexpression/v1/: coexpression.proto
proto-def/genome/: buf.yaml
proto-def/genome/genomebase_genome/v1/: genome.proto
proto-def/genome/v1/: genome.proto
server/: Cargo.toml
server/co-expression/: Cargo.toml
server/co-expression/co-expression-domain/src/: irepository.rs
server/co-expression/src/: mongo.rs
server/common/src/: lib.rs
server/genome/genome-domain/src/: go_term.rs
