[workspace]
members = [
  "common",
  "genome",
  "genome/genome-domain",
  "genome/mysql",
  "genome/mysql/migration",
  "co-expression/",
  "co-expression/co-expression-domain",
]

[workspace.dependencies]
serde = { version = "~1.0", features = ["derive"] }
async-trait = "~0.1"
anyhow = "~1.0"
derive-new = "0.5.9"