[workspace]
members = [
  "common",
  "genome",
  "genome/genome-domain",
  "genome/mysql",
  "co-expression/",
  "co-expression/co-expression-domain",
]

[workspace.dependencies]
serde = { version = "~1.0", features = ["derive"] }
async-trait = "~0.1"
anyhow = "1.0.71"
derive-new = "0.5.9"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
bio = { version = "1.1.0", features = ["phylogeny"] }
tempfile = "3.5.0"