[package]
name = "gff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
derive-new = "0.6.0"
indexmap = { version = "2.1.0", features = ["serde"] }
serde = { workspace = true }
strum = { version = "0.25.0", features = ["derive", "strum_macros"] }
strum_macros = "0.25.3"
