[package]
name = "co-expression"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = "0.4.23"
co-expression-domain = { path = "./co-expression-domain" }
mongodb = { version = "2.3.1", features = ["tokio-runtime"] }
serde = { workspace = true }
tokio = "1.25.0"
