[package]
name = "genome-domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
serde = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
paste = "1.0.11"

[dev-dependencies]
serde_test = "1.0.152"
