[package]
name = "genome-domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
common = { path = "../../common" }
derive-new = { workspace = true }
paste = "1.0.11"
serde = { workspace = true }

[dev-dependencies]
serde_test = "1.0.152"
