[package]
name = "genome-domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
bio = { workspace = true }
chrono = "0.4.24"
common = { path = "../../common" }
derive-new = { workspace = true }
fishers_exact = "1.0.1"
paste = "1.0.11"
serde = { workspace = true }
uuid = { version = "1.3.0", features = ["serde"] }

[dev-dependencies]
serde_test = "1.0.152"
