[package]
name = "mysql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = "0.3.27"
genome-domain = { path = "../genome-domain" }
sea-orm = { version = "0.11.2", features = ["sqlx-mysql", "runtime-tokio-native-tls"] }
sqlx = { version = "0.6.3", features = ["mysql", 'runtime-tokio-native-tls', "macros"] }
