[package]
name = "mysql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = "0.3.27"
genome-domain = { path = "../genome-domain" }
sqlx = { version = "0.6.3", features = ["mysql", 'runtime-tokio-native-tls', "macros", "migrate"] }
uuid = { workspace = true }
bio = { workspace = true }
serde_json = { version = "1.0.96", features = ["raw_value"] }

[dev-dependencies]
tempfile = { workspace = true }